--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #1E1E1E;
-    --verde: #6FFF57;
-    --branco: #FFFFFF;
+    --cor-de-fundo: #2a8c3d;
+    --verde: #50bda6d2;
+    --branco: #c55454;
     --botao-ativo: #3A375E;
-    --botao-inativo: rgba(58, 55, 94, 0.5);
-    --texto-fundo: rgba(58, 55, 94, 0.3);
+    --botao-inativo: rgba(38, 26, 177, 0.5);
+    --texto-fundo: rgba(107, 40, 93, 0.3);
 }
 
 body {
